cbi fix not bug keo tha